--- a/VRChat/98/1319998.html
+++ b/VRChat/98/1319998.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bYCvf9HIUfE4PNB8P9CElcF+mar1rK6yzR6Y7Ep7D6A="></script>
+    "IvYchpRbzyO3ixM+SfHsElv2Q0yDQmev9OkixeZmpig="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リネなんとか2のザケなんとかパーティクル","description":"zakenppoiはUnityでご利用いただける、Particle Systemの素材です。\nVRChatでの使用を想定しており、ネタとして良い体験を支援するために作りました。\n\n","url":"https://booth.pm/ja/items/1319998","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/69e088f2-5cc3-4f85-a30a-6d194aa96cfa/i/1319998/42deb11f-0ab1-4380-b9b1-b209bdf1f435_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bYCvf9HIUfE4PNB8P9CElcF+mar1rK6yzR6Y7Ep7D6A="></script>
+    nonce="IvYchpRbzyO3ixM+SfHsElv2Q0yDQmev9OkixeZmpig="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -399,9 +399,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
