--- a/VRChat/07/1370907.html
+++ b/VRChat/07/1370907.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PuirZDhJpBUI0fRQtiw/zMHrCCzJKwAgFICepYEz0xI="></script>
+    "tvOeR+2fe/P1aupn/ZPeWmEBVKCH0fi8UIW6NG4md70="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"りょうさん型ケイロカミオカ改 ケイコカミオカ","description":"ケイロカミオカ氏本人が配布しているりょうさん型ケイロカミオカをおばあちゃんに改変した、VRC用アバターです。\nセットアップ済みUnityPackageが含まれています。\nVRChat SDKとliltoonが必要です。\n\npublicアバターも公開しているのでアップロードしなくても使えます\nhttps://vrchat.com/home/launch?worldId=wrld_e904ac75-d854-4202-9a69-d9ec19bc4c8c","url":"https://booth.pm/ja/items/1370907","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1f596065-0a7f-4db3-a357-9ddcef395015/i/1370907/25d3b305-6800-43b1-b3a5-e1275cb8c2b6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PuirZDhJpBUI0fRQtiw/zMHrCCzJKwAgFICepYEz0xI="></script>
+    nonce="tvOeR+2fe/P1aupn/ZPeWmEBVKCH0fi8UIW6NG4md70="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -339,9 +339,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
