--- a/VRChat/47/1370147.html
+++ b/VRChat/47/1370147.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "cWH1qGQu/veFg2I/yIhc5FzqOazs3bpntBm7qLH6JE8="></script>
+    "x1mnPCpCLExdi1ZdotmO0+0ThJV2WueJ0RDvlzIgVz4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Watch v1","description":"現在Worldに止まっていた時間を表示する機能を持っている時計です。\n\n\n\n[Polygon]\n\nFaces:4541\nTris:8758\n\n[Texture]\n\n2048X2048\n\nBasement (Albedo)\nNormal\nMetallic\nEmission\n\n(Standard/Flat Toon Material)\n\n[File]\n\nWatch_v1.Unitypackage(1,994KB)\nIf Change Scale.txt(1KB)\n\n[Email]\n\nPhecrys@gmail.com\n\n-----------------------------------------------\n\n以前に掲示されたファイルは,商標表記関連の問題により削除されました。\n\nそれによってロゴを除去したバージョンで新たに掲示されました。\n\n申し訳ありませんが,以前時計を購入された方々は購買内訳をEメールでお送りしましたらファイルを送ります。\n\nありがとうございます\n\n(Korean -\u003e Japanese Translate)","url":"https://booth.pm/ja/items/1370147","offers":{"priceCurrency":"JPY","@type":"Offer","price":"350"},"image":"https://booth.pximg.net/c/620x620/4a1c1edc-9b81-4a0c-9a1f-0a5af94b8e1a/i/1370147/f5d4713e-92eb-48e3-aa8d-c7c0f46a04ac_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cWH1qGQu/veFg2I/yIhc5FzqOazs3bpntBm7qLH6JE8="></script>
+    nonce="x1mnPCpCLExdi1ZdotmO0+0ThJV2WueJ0RDvlzIgVz4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -470,9 +470,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
