--- a/VRChat/94/1369294.html
+++ b/VRChat/94/1369294.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "I3F7Wp41T6nZxU9HNefiSun8C2iMKxmBZ+A4wBpj9RI="></script>
+    "rR/Qov0O4YApf/TMG/bYsC0xAEBmaf/3QrhFadMtuDo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バーチャルキャストイベントポスターカレンダー","description":"🧩絵柄を募集中！🧩 (下の方の見出しを参照)\n\nバーチャルキャストやVRChat上で利用できる、バーチャルキャストイベントカレンダーのポスターカレンダーです。\n\n※ポスターカレンダーは、バーチャルキャストの公式のサービスではありません。\n※予定を登録してからポスターカレンダーへ反映されるまでには、最大で3時間ほどの遅延があります。経由しているサービスの停止等により、さらに遅れる場合もあります。\n\n▚▚▚ 画像のURL\nhttps://esperecyan.github.io/vcas-calendar-poster/v4.png\n\n※2023-06-19にURL変更\n\n▚▚▚ VirtualCastストアのアイテム\nhttps://virtualcast.jp/products/264bbb24bbeb996dcaa477ab0cf47e27e21f35670d629291178b9cf40d223092\n※諸事情により、2022-08-09以降、VirtualCast公式素材置き場アカウントで管理してもらうことになったため、アイテムが変更になっています。お手数をおかけしますが、取り込み直し・配置し直し等をお願いいたします。\n\n▚▚▚ VRChatワールド用プレハブ\n以下のページをご覧ください。\n\n『VRChat向け自動更新ポスターまとめ』の使い方 | バーチャルライフマガジン\nhttps://vr-lifemagazine.com/vrchat-posters/\n\n\n\nバーチャルキャストイベントポスターカレンダーは、坪倉輝明さんの『VRChatイベントカレンダーPrefab』のアイデア、デザインを基にして作成しました。\nhttps://tsubokulab.booth.pm/items/1223535","url":"https://booth.pm/ja/items/1369294","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ba01b0da-9d0b-4dd8-a9ad-3f35270de1c8/i/1369294/07f85084-0535-4774-b1ad-5c6cbb707a5b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I3F7Wp41T6nZxU9HNefiSun8C2iMKxmBZ+A4wBpj9RI="></script>
+    nonce="rR/Qov0O4YApf/TMG/bYsC0xAEBmaf/3QrhFadMtuDo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -492,9 +492,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
