--- a/VRChat/46/1369346.html
+++ b/VRChat/46/1369346.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "wgXGOffupqWB3OD5ofhmeWftA1iLC/lUMTIv+BxuYcw="></script>
+    "wABEZM/A/K8aI16tOCHm5kTkOcpwIFy6ufmcIFrufcA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ライター（VRChat想定）","description":"普通のライターです。\nこちらのモデルはVRChatでの使用を想定して作っていますが、禁止事項を守って頂ければVRChat以外でもご自由にご利用ください。\n\n内容物\n・LighterSilver.fbx（FBXファイル）\n・LighterSilver.fbx.meta（メタデータ）\n・ライター.prefab（プレハブ）\n・ライター.prefab.meta（メタデータ）\n・ライター本体.mat（マテリアル）\n・ライター本体.mat.meta（メタデータ）\n・中の金属.mat（マテリアル）\n・中の金属.mat.meta（メタデータ）\n\n使用方法\n全ファイルをUnityに読み込み、ライター.prefabを使用してください。\nライター本体.mat（マテリアル）を弄れば色や光沢等のカスタマイズができます。\nボーン→下側→キャップ（画像上部赤枠）を回転するとキャップが開きます。\nInspectorのSkinned Mesh Renderer内、BlendShapesのFireの値を100にすると着火できます。\n\n禁止事項\n再配布（ゲームへの組み込み・VRCのペデスタル等はOK）\n政治的・宗教的・差別的な用途への利用\n\n19/05/14\n火打石の追加しました。\n既にダウンロード済みの方はお手数ですが再度入れなおしてください。（上書き不可）","url":"https://booth.pm/ja/items/1369346","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4dfbeda-de4a-441b-ace4-484612b68061/i/1369346/6f2ec031-755e-445c-b03a-c0493c6beef0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wgXGOffupqWB3OD5ofhmeWftA1iLC/lUMTIv+BxuYcw="></script>
+    nonce="wABEZM/A/K8aI16tOCHm5kTkOcpwIFy6ufmcIFrufcA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -412,9 +412,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
