--- a/VRChat/28/1368728.html
+++ b/VRChat/28/1368728.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Y0zNQXERneQDKa1haE6X7zx5uJYLxKYNcIJTB5GTT3U="></script>
+    "TbKSLPCBVjp2aE+iK+BxqKbAVWK0KxtoqVxnrpceE5I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定　サファリハット","description":"VRCでの使用を想定したサファリハットのモデルです。\nUnityで、Headボーンの階層に追従させてお使いください。\nお出かけのお供に、いかがですか？\n\n・改変等は自由ですが、改変モデルの商業利用を禁止します。\n\n・当モデルの二次配布も禁止します。","url":"https://booth.pm/ja/items/1368728","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/70362ed7-0e33-4a16-9cbc-71a69d008f43/i/1368728/cfd0452b-77a8-40d4-9c9f-a52ff44cc6f9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Y0zNQXERneQDKa1haE6X7zx5uJYLxKYNcIJTB5GTT3U="></script>
+    nonce="TbKSLPCBVjp2aE+iK+BxqKbAVWK0KxtoqVxnrpceE5I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -478,9 +478,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
