--- a/VRChat/79/1276079.html
+++ b/VRChat/79/1276079.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "81wxxGmx3qMXByrcsacUtofUdoq5blt6dZu1AdBBfiQ="></script>
+    "kUxGq6QFT1cnx0MKuofwUMsAtvNx1jclIFt053OfvZE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChatで読める新聞「週刊フレンドプラス」","description":"VRChatのワールドに設置することのできる自動更新型コンテンツです。（TwitterID：DD_Jellyfishが手動更新しています）\n週刊フレンドプラスはVRChat上での話題提供を目的に制作している新聞型情報コンテンツです。VRChat上の話題を中心に取り扱っています。\nUnitypackage形式なので、Unityでワールドのプロジェクトに取り込んでご利用ください。\n\nバックナンバーはこちら：\nhttps://drive.google.com/drive/folders/1D8wbtMVSceUNKI1IRKcI6ldnWvGP02WA","url":"https://booth.pm/ja/items/1276079","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/35ad0fa7-eb31-41fa-b842-fcdd7687593f/i/1276079/9674ed85-ba1b-42bf-ab8e-0dd61b53fdaf_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="81wxxGmx3qMXByrcsacUtofUdoq5blt6dZu1AdBBfiQ="></script>
+    nonce="kUxGq6QFT1cnx0MKuofwUMsAtvNx1jclIFt053OfvZE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -347,9 +347,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
