--- a/VRChat/77/1368377.html
+++ b/VRChat/77/1368377.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rzb1SZQDiz7PELe7V5V6HX+JXvVVrLPAs8nfhcnbDKE="></script>
+    "ncNe6IdMEMkAv2ZpGnuolpI/5kdR+tHqEK/zdpiDtEU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"標準型生活補助義肢「Limb range」(義手・義足)","description":"両手両足の義肢セットです、ボーンとウェイトは設定済み\nなので一応Unityのみでの導入も可能です\n\n両手両足：△46724\n片腕：△14724\n片足：△8638\n\n・内容物\n　Blenderデータ\n　FBX\n　Readme","url":"https://booth.pm/ja/items/1368377","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/30d611ee-0eda-4ac5-9e8d-4bc31c8a94dc/i/1368377/0a142b66-f493-4c47-8a75-58c8554403d1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rzb1SZQDiz7PELe7V5V6HX+JXvVVrLPAs8nfhcnbDKE="></script>
+    nonce="ncNe6IdMEMkAv2ZpGnuolpI/5kdR+tHqEK/zdpiDtEU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -464,9 +464,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
